# competitive-heuristic

./: .gitignore  .gitmodules  CMakeLists.txt  MODULE.bazel  Makefile  README.md  check.cpp  experiment.cpp  get_point.sh  get_point_by_maneger.sh  get_point_with_tester.sh  gridSlider.html  install_acl.sh  install_boost.sh  local_headers_debug.hpp  local_headers_measure.hpp  main.cpp  main.tmp.cpp  make_case.cpp  normal_execute.sh  reset.sh  sample_code_execute.sh  score_manager.cpp  score_manager.py  score_setting.json  setup_official_tester.sh  target_execute.sh
codes/: annealing.cpp  beam_search.cpp  climbing.cpp  greedy.cpp
debug/: print.hpp
example_problem/: CMakeLists.txt  README.md  generator.cpp  sample.cpp  setup_example_tester.sh  visualizer.cpp
grid_slider/: CMakeLists.txt  create_grid_data.cpp  grid.hpp
templates/: experiment.cpp  main.cpp
